--- a/Foras_Khadra/Foras_Khadra/wwwroot/css/articles-details.css
+++ b/Foras_Khadra/Foras_Khadra/wwwroot/css/articles-details.css
@@ -251,7 +251,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    order: -1;
+    /* order: -1; */
 }
 
 .verified-icon {
